--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "react-dev": "webpack -d --watch",
+    "bundle": "webpack -d",
     "test": "jest -u",
+    "server": "node server/index.js &",
     "react-server": "nodemon server/index.js",
     "seed": "node database/seed.js",
     "test-w": "jest -u --detectOpenHandles --watch"
